--- a/app/views/posts/index.haml
+++ b/app/views/posts/index.haml
@@ -5,10 +5,14 @@
     %tr 
       %td Title
       %td Content
+      %td Actions
   %tbody
   - @posts.each do |post|
     %tr
       %td
         %a{ href: "/posts/#{post.id}" }= post.title
       %td= post.content
+      %td
+        %a{ href: "/posts/#{post.id}/edit", role: "button" } Edit
+        %a{ href: "/posts/#{post.id}", role: "button", "data-method": :delete } Remove
 
