--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -12,4 +12,9 @@ html, body{
 
 body{
   background-color: #eee;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6{
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
