--- a/app/views/layout.haml
+++ b/app/views/layout.haml
@@ -3,7 +3,7 @@
     %meta{ content: 'Blue' }
     %meta{ name:"viewport", content:"width=device-width, initial-scale=1" }
     %link{ href: 'assets/app.css', rel: 'stylesheet' }
-  %body
+  %body{ class: 'container' }
     %header
       %h1 The title
     %main
