--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -18,3 +18,7 @@ body{
 h1, h2, h3, h4, h5, h6{
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
+
+.btn, button, [type='submit']{
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
