--- a/app/views/posts/_form.haml
+++ b/app/views/posts/_form.haml
@@ -1,3 +1,5 @@
+%input{ type: 'hidden', name: 'post[user_id]', value: current_user.id }
+
 .form-group
   %label{ for: 'title' } Title
   %input{ id: 'title', name: 'post[title]', type: 'text', value: post.title ? post.title : '' }
