--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -22,3 +22,26 @@ h1, h2, h3, h4, h5, h6{
 .btn, button, [type='submit']{
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+
+table{
+  width: 100%;
+  margin: 1rem 0;
+  border-collapse: collapse;
+  & thead{
+    background: #ddd;
+
+    font-weight: bold;
+  }
+
+  & th, & td{
+    padding: 0.5rem 0.75rem;
+  }
+
+  & td{
+    border-bottom: 1px solid #ddd;
+  }
+
+  & tr:nth-child(2n){
+    background: #ddd;
+  }
+}
